product styling changed

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -13,12 +13,12 @@
     <div id="nav">
         <h3 class="logo">Fashion</h3>
         <ul>
-            <li class="item active"><a href="index.html">Home</a></li>
+            <li class="item"><a href="index.html">Home</a></li>
             <li class="item">Women</li>
             <li class="item">Men</li>
             <li class="item">Footwear</li>
             <li class="item">Sales</li>
-            <li class="item">Cart</li>
+            <li class="item active">Cart</li>
         </ul>
     </div>
     <div id="cart">
