--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shopping App</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
@@ -25,61 +27,103 @@
         <img src="../assets/flaunter-com-237609-unsplash.jpg" alt="">
     </div>
     <main>
-        <div class="product">
-            <h4>NHmae</h4>
+
+        <div class="product z-depth-5">
+            <div class="even-spaced">
+                <h4>Dragon</h4>
+                <a href=""><i class="fas fa-cart-plus"></i></a>
+            </div>
+
+            <div class="even-spaced">
+                <span>$10</span>
+                <a href=""><i class="far fa-heart"></i></a>
+            </div>
             <img src="../assets/1.jpg" alt="">
-            <div class="action">
-                <span>$10</span>
-                <button id="btn">Add to cart</button>
-            </div>
+
         </div>
-        <div class="product">
-            <h4>Moriarty</h4>
+
+        <div class="product z-depth-5">
+            <div class="even-spaced">
+                <h4>Dragon</h4>
+                <a href=""><i class="fas fa-cart-plus"></i></a>
+            </div>
+
+            <div class="even-spaced">
+                <span>$10</span>
+                <a href=""><i class="far fa-heart"></i></a>
+            </div>
             <img src="../assets/5.jpg" alt="">
-            <div class="action">
-                <span>$10</span>
-                <button id="btn">Add to cart</button>
-            </div>
+
         </div>
-        <div class="product">
-            <h4>Diamond</h4>
+
+        <div class="product z-depth-5">
+            <div class="even-spaced">
+                <h4>Dragon</h4>
+                <a href=""><i class="fas fa-cart-plus"></i></a>
+            </div>
+
+            <div class="even-spaced">
+                <span>$10</span>
+                <a href=""><i class="far fa-heart"></i></a>
+            </div>
             <img src="../assets/2.jpg" alt="">
-            <div class="action">
-                <span>$10</span>
-                <button id="btn">Add to cart</button>
-            </div>
+
         </div>
-        <div class="product">
-            <h4>Monte Carlo</h4>
+
+        <div class="product z-depth-5">
+            <div class="even-spaced">
+                <h4>Dragon</h4>
+                <a href=""><i class="fas fa-cart-plus"></i></a>
+            </div>
+
+            <div class="even-spaced">
+                <span>$10</span>
+                <a href=""><i class="far fa-heart"></i></a>
+            </div>
             <img src="../assets/3.jpg" alt="">
-            <div class="action">
-                <span>$10</span>
-                <button id="btn">Add to cart</button>
-            </div>
+
         </div>
-        <div class="product">
-            <h4>Miasma</h4>
+
+        <div class="product z-depth-5">
+            <div class="even-spaced">
+                <h4>Dragon</h4>
+                <a href=""><i class="fas fa-cart-plus"></i></a>
+            </div>
+
+            <div class="even-spaced">
+                <span>$10</span>
+                <a href=""><i class="far fa-heart"></i></a>
+            </div>
             <img src="../assets/4.jpg" alt="">
-            <div class="action">
-                <span>$10</span>
-                <button id="btn">Add to cart</button>
-            </div>
+
         </div>
-        <div class="product">
-            <h4>Milton</h4>
+
+        <div class="product z-depth-5">
+            <div class="even-spaced">
+                <h4>Dragon</h4>
+                <a href=""><i class="fas fa-cart-plus"></i></a>
+            </div>
+
+            <div class="even-spaced">
+                <span>$10</span>
+                <a href=""><i class="far fa-heart"></i></a>
+            </div>
             <img src="../assets/6.jpg" alt="">
-            <div class="action">
-                <span>$10</span>
-                <button id="btn">Add to cart</button>
-            </div>
+
         </div>
-        <div class="product">
-            <h4>Maleficent</h4>
-            <img src="../assets/7.jpg" alt="">
-            <div class="action">
-                <span>$10</span>
-                <button id="btn">Add to cart</button>
+
+        <div class="product z-depth-5">
+            <div class="even-spaced">
+                <h4>Dragon</h4>
+                <a href=""><i class="fas fa-cart-plus"></i></a>
             </div>
+
+            <div class="even-spaced">
+                <span>$10</span>
+                <a href=""><i class="far fa-heart"></i></a>
+            </div>
+            <img src="../assets/7.jpg" alt="">
+
         </div>
     </main>
     <footer>
