--- a/css/style.css
+++ b/css/style.css
@@ -1,88 +1,190 @@
-body{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-}
-#nav {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    background: #000000;
-    padding: 10px;
-    box-sizing: border-box;
+body {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background: white;
 }
 
-.logo{
-    color: white;
+h4 {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+/* Material styles for depth */
+.z-depth-0 {
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+/* 2dp elevation modified*/
+.z-depth-1,
+nav,
+.card-panel,
+.card,
+.toast,
+.btn,
+.btn-large,
+.btn-small,
+.btn-floating,
+.dropdown-content,
+.collapsible,
+.sidenav {
+  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.z-depth-1-half,
+.btn:hover,
+.btn-large:hover,
+.btn-small:hover,
+.btn-floating:hover {
+  -webkit-box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14),
+    0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12),
+    0 3px 1px -1px rgba(0, 0, 0, 0.2);
+}
+
+/* 6dp elevation modified*/
+.z-depth-2 {
+  -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
+    0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12),
+    0 2px 4px -1px rgba(0, 0, 0, 0.3);
+}
+
+/* 12dp elevation modified*/
+.z-depth-3 {
+  -webkit-box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 17px 2px rgba(0, 0, 0, 0.14),
+    0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.2);
+}
+
+/* 16dp elevation */
+.z-depth-4 {
+  -webkit-box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+    0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14),
+    0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
+}
+
+/* 24dp elevation */
+.z-depth-5,
+.modal {
+  -webkit-box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+    0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 24px 38px 3px rgba(0, 0, 0, 0.14),
+    0 9px 46px 8px rgba(0, 0, 0, 0.12), 0 11px 15px -7px rgba(0, 0, 0, 0.2);
+}
+
+.hoverable {
+  -webkit-transition: -webkit-box-shadow 0.25s;
+  transition: -webkit-box-shadow 0.25s;
+  transition: box-shadow 0.25s;
+  transition: box-shadow 0.25s, -webkit-box-shadow 0.25s;
+}
+
+.hoverable:hover {
+  -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2),
+    0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+/* Styles for home page */
+#nav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  background: #000000;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.logo {
+  color: white;
 }
 
 #nav ul {
-    display: flex;
-    width: 80%;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  width: 80%;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 #nav ul li {
-    list-style: none;
-    margin: 5px 15px;
-    color: white;
-    cursor: pointer;
+  list-style: none;
+  margin: 5px 15px;
+  color: white;
+  cursor: pointer;
 }
 
 .active {
-    color: hotpink !important;
+  color: hotpink !important;
 }
 
 #banner {
-    margin: 10px auto;
-    width: 90%;
-    height: 400px;
-    display: inline;
+  margin: 10px auto;
+  width: 90%;
+  height: 400px;
+  display: inline;
 }
 
 #banner img {
-    width: 100%;
-    max-height: 500px;
-    
+  width: 100%;
+  max-height: 500px;
 }
 
 .product {
-    width: 250px;
-    height: 400px;
-    border: 2px solid slategray;
-    border-radius: 5px;
-    display: inline-block;
-    padding: 10px;
-    box-sizing: border-box;
-    margin: 10px;
+  width: 250px;
+  height: 330px;
+  border-radius: 5px;
+  display: inline-block;
+  box-sizing: border-box;
+  margin: 10px;
+  background-color: white;
+}
+
+.even-spaced {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .product img {
-    width: 100%;
-    height: 250px;
+  width: 100%;
+  height: 250px;
+  border-radius: 5px;
 }
 
-.action {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    align-items: center;
+.product i {
+  color: lightgray;
 }
 
+.product span {
+  color: rebeccapurple;
+}
 main {
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-#btn {
-    padding: 10px;
-    background: hotpink;
-    color: white;
-    border-radius: 3px;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
-    border: none;
+.btn {
+  padding: 10px 24px;
+  background: hotpink;
+  color: white;
+  border-radius: 3px;
+  border: none;
 }
 
 footer p {
-    text-align: center;
+  text-align: center;
 }
